src/test/ui/destructuring-assignment/note-unsupported.stderr
error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:6:12
   |
LL |     (a, b) = (3, 4);
   |            ^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0368]: binary assignment operation `+=` cannot be applied to type `({integer}, {integer})`
  --> $DIR/note-unsupported.rs:7:5
   |
LL |     (a, b) += (3, 4);
   |     ------^^^^^^^^^^
   |     |
   |     cannot use `+=` on type `({integer}, {integer})`

error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:7:12
   |
LL |     (a, b) += (3, 4);
   |            ^^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:10:12
   |
LL |     [a, b] = [3, 4];
   |            ^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0368]: binary assignment operation `+=` cannot be applied to type `[{integer}; 2]`
  --> $DIR/note-unsupported.rs:11:5
   |
LL |     [a, b] += [3, 4];
   |     ------^^^^^^^^^^
   |     |
   |     cannot use `+=` on type `[{integer}; 2]`

error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:11:12
   |
LL |     [a, b] += [3, 4];
   |            ^^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:16:22
   |
LL |     S { x: a, y: b } = s;
   |                      ^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0368]: binary assignment operation `+=` cannot be applied to type `S`
  --> $DIR/note-unsupported.rs:17:5
   |
LL |     S { x: a, y: b } += s;
   |     ----------------^^^^^
   |     |
   |     cannot use `+=` on type `S`
   |
   = note: an implementation of `std::ops::AddAssign` might be missing for `S`

error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:17:22
   |
LL |     S { x: a, y: b } += s;
   |                      ^^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:20:21
   |
LL |     S { x: a, ..s } = S { x: 3, y: 4 };
   |                     ^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error[E0658]: destructuring assignments are unstable
  --> $DIR/destructuring-assignment.rs:24:17
   |
LL |     ((a, b), c) = ((3, 4), 5);
   |                 ^
   |
   = help: add `#![feature(destructuring_assignment)]` to the crate attributes to enable

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0368, E0658.
For more information about an error, try `rustc --explain E0368`.
